@@ -217,6 +217,7 @@ void options_init(void)
     o.sslverify = 0;
     o.ssltrustfile = NULL;
     o.sslciphers = NULL;
+    o.sslservername = NULL;
     o.sslalpn = NULL;
 #endif
 }
